Revision history for Perl extension Net::Server.

2.011  Dec 01 2022
        - Default to IO::Socket::IP with continued fallback to IO::Socket::INET6
        - Add double_reverse_lookups configuration and code
        - Change SSL to use IO::Socket::SSL SSL_startHandshake
        - Fix semaphore release
        - Update various POD issues
        - Bugfix Net::Server::PSGI

2.010  Mar 22 2021
        - Add SSL_verify_callback
        - Fix SSLEAY connect spinloop
        - Various pod typos
        - Allow for logging to STDOUT for HTTP
        - Add PATCH verb to HTTP

2.009  Aug 09 2017
        - Several long awaited fixes
        - Log when a child exits abnormally. RT #86815
        - Added delete-child hook
        - Add cleanup_dead_child_hook to PreFork server
        - Removed stray warn
        - Use File::Temp instead of POSIX::tmpnam
        - UNIX read_until to allow for SSL under unix sockets

2.008  May 12 2014
        - Long awaited patch for the IO::Socket::SSL default verify mode bug
        - Add Time::HiRes as a dep
        - Update to new github hosted repository with all legacy code imported
        - Beginnings of change to dzil based releases
        - There are several dozen outstanding bugs that will be addressed in the next release

2.007  Jan 09 2013
        - Update run_dequeue to clear out signals after fork.
        - Add serialize none for PreFork and PreForkSimple servers that at not multi-port.
        - Allow for auto-assigned port to be the same when hostname resolves to multiple ips/ipvs (RT #78024)
        - Fix bug in header parsing (RT #82125)
        - Fix warning bug (RT #78828)
        - Fix wrong wantarray context in Proto::TCP (RT #31437)
        - Simplify _get_commandline to just use $0 - no fishing in proc (RT #80260)
        - Fix uninitialized begin (RT #78830)
        - Fix misplaced +2 (RT #78827)
        - Fix various spelling errors and pod nits (RT #77994)